discussion/kv_engine/180445/180445_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52676: Pull assorted constants and utilities out of ItemEviction

Minimise coupling of other classes (e.g., DcpProducer) to ItemEviction
in preparation for adding an alternative implementation using upfront
tracked MFU histograms.

Change-Id: I5d2d6757072deeba1aeb43aacdb9034d64640ba3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-09-29 15:56:26.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-29 15:57:58.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49844/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49844/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41886/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41886/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10604/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10604/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10504/ : ABORTED

Compile error at [2022-09-29T15:57:54.349Z] ../kv_engine/engines/ep/src/eviction_utils.h:36:11:
error: C++ requires a type specifier for all declarations
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10504/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10504/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22775/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22775/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23171/ : ABORTED

Compile error at [2022-09-29T15:57:38.458Z] ../kv_engine/engines/ep/src/eviction_utils.h:36:11:
error: ?maxAgeValue? does not name a type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23171/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23171/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24004/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24004/ )

Compile error at [2022-09-29T15:57:47.448Z] ../kv_engine/engines/ep/src/eviction_utils.h:36:11:
error: C++ requires a type specifier for all declarations
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24004/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24004/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31185/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31185/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22177/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22177/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20791/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/eviction_utils.h:36:11: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
constexpr maxAgeValue = std::numeric_limits<uint64_t>::max() >> casBitsNotTime;
          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20791/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/eviction_utils.h:36:11:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20791/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20021/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
